--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "umb"
-version = "0.3.0"
+version = "0.3.1"
 description = "A build tool for academic manuscripts"
 authors = [
     { name = "zietzm", email = "michael.zietz@gmail.com" }
@@ -17,14 +17,14 @@ dependencies = [
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "License :: OSI Approved :: MIT License",
+    "Topic :: Text Processing :: Markup :: LaTeX",
+]
 
 [project.scripts]
 "umb" = "umb.cli:main"
-
-[project.optional-dependencies]
-tex = [
-    "pytinytex @ git+https://github.com/zietzm/PyTinyTeX@refactor",
-]
 
 [build-system]
 requires = ["hatchling"]
