fix(ci): install tinytex in github action

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,6 +25,8 @@ jobs:
         use-uv: true
     - name: sync
       run: rye sync
+    - name: install tinytex
+      run: rye run umb install
     - name: lint
       run: rye lint
     - name: test
