fix: build package before pushing to PyPI

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -35,6 +35,8 @@ jobs:
       run: rye lint
     - name: test
       run: rye test
+    - name: build
+      run: rye build
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
